--- a/style.css
+++ b/style.css
@@ -1,69 +1,92 @@
 * {
   margin: 0;
-  padding: 0%;
+  padding: 0;
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 
 
 header {
-  position: sticky;
-  top: 30px;
-}
-
-body {
-  height: 300vh;
-}
-nav {
-  width: 75%;
-  margin: 30px auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: rgba(255, 255, 255, 0.496);
-  border: 1px solid white;
-  padding: 10px 20px;
-  border-radius: 24px;
-  backdrop-filter: blur(20px);
-  
-}
-
-
-.logo {
-  height: 100px;
-  width: 100px;
-  border-radius: 50%;
-  background-color: rgb(169, 169, 169);
-}
-
-
-.menu > li {
-  display: inline-block;
-  padding: 15px 35px;
-  background-color: rgb(207, 207, 207);
-  border-radius: 24px;
-}
-
-.menu > li > a {
-  text-decoration: none;
-  color: black;
-  font-family: sans-serif;
-}
-
-li:hover {
-  background-color: black;
-}
-
-li:hover a {
-  color: white;
-}
-
-.content {
-  width: 90%;
+  width: fit-content;
   margin: auto;
+  height: 800px;
+  border-radius: 24px;
+
+  overflow: hidden;
+}
+
+main {
+  margin-top: 50px;
+  width: 100%;
+
+  display: flex;
+  
+  justify-content: space-around;
+  row-gap: 30px;
+   column-gap: 40px;
+  flex-wrap: wrap;
+
+}
+
+
+.card {
+  height: 450px;
+  width: 300px;
   border-radius: 24px;
   overflow: hidden;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  transition: all 0.3s;
+}
+
+.card:hover {
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
 video {
   width: 100%;
+  height: 100%;
+ 
+}
+
+
+figure {
+  height: 50%;
+  width: 100%;
+
+}
+
+figcaption {
+  padding: 20px;
+  width: 100%;
+  height: 50%;
+  background-color: white;
+}
+
+p {
+  margin-top: 15px;
+}
+
+.btn-wrapper {
+  margin-top: 20px;
+}
+
+button {
+  padding: 5px 18px;
+  border-radius: 20px;
+  cursor: pointer;
+  border: none;
+  background-color: dodgerblue;
+  color: white;
+}
+img {
+   height: 100%;
+   width: 100%;
+   object-fit: cover;
+}
+
+
+footer {
+  margin-top: 40px;
+  width: 100%;
+
 }
